--- a/env/dev/infra/LAMBDA/lambda_function_payload/requirements.txt
+++ b/env/dev/infra/LAMBDA/lambda_function_payload/requirements.txt
@@ -1,5 +1,6 @@
-boto3
-aws-xray-sdk
-aws-lambda-powertools
-aws-lambda-powertools>=2.0.0
-requests>=2.28.0
+aws_xray_sdk==0.95
+boto3==1.26.0
+aws_lambda_powertools==2.31.0
+loguru==0.7.0
+grafana_loki==0.1.1
+requests==2.31.0
